# vmsignal

./: .gitignore  Readme.txt
SharedLibrary/: readme.txt
SharedLibrary/Linux/X64/Shared/Debug/: libvmsignal.so.1.0
SharedLibrary/Linux/X64/Shared/Release/: libvmsignal.so.1.0
SharedLibrary/Linux/aarch64-linux/Shared/Debug/: libvmsignal.so.1.0
SharedLibrary/Linux/aarch64-linux/Shared/Release/: libvmsignal.so.1.0
SharedLibrary/Linux/arm-linux-gnueabi/Shared/Debug/: libvmsignal.so.1.0
SharedLibrary/Linux/arm-linux-gnueabi/Shared/Release/: libvmsignal.so.1.0
SharedLibrary/Linux/arm-linux-gnueabihf/Shared/Debug/: libvmsignal.so.1.0
SharedLibrary/Linux/arm-linux-gnueabihf/Shared/Release/: libvmsignal.so.1.0
SharedLibrary/Windows/AMR64/Shared/Debug/: vmsignal.exp  vmsignal.lib
SharedLibrary/Windows/AMR64/Shared/Release/: vmsignal.exp  vmsignal.lib
SharedLibrary/Windows/AMR64/Static/Debug/: vmsignal.lib
SharedLibrary/Windows/AMR64/Static/Release/: vmsignal.lib
SharedLibrary/Windows/X64/Shared/Debug/: vmsignal.exp  vmsignal.lib
SharedLibrary/Windows/X64/Shared/Release/: vmsignal.exp  vmsignal.lib
SharedLibrary/Windows/X64/Static/Debug/: vmsignal.lib
SharedLibrary/Windows/X64/Static/Release/: vmsignal.lib
SharedLibrary/Windows/X86/Shared/Debug/: vmsignal.exp  vmsignal.lib
SharedLibrary/Windows/X86/Shared/Release/: vmsignal.exp  vmsignal.lib
SharedLibrary/Windows/X86/Static/Debug/: vmsignal.lib
SharedLibrary/Windows/X86/Static/Release/: vmsignal.lib
inc/: basic_global.h  minmaxdef.h  vmchebyshev.h  vmcorrelandpmpse.h  vmcplx_fun.h  vmcplx_vector.h  vmfilter_def.h  vmfilters.h  vmfreqz.h  vmhyperbola.h  vminterp1.h  vmresp.h  vmsignal_global.h  vmsuanfa.h
inc/convol/: vmconvol.h
inc/fft/: vmcal_m.h  vmdft.h  vmdht.h  vmfft.h  vmfftinfo.h  vmfht.h  vmreal_fft.h
inc/fftcpp/: vmdit2_fft_core.h  vmdit4_fft_core.h  vmfft_core.h  vmfht_core.h  vmreal_fft_core.h
inc/window/: vmwindow.h
test/: CMakeLists.txt  signaltest.cpp
